# TG_image_processing

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  README.md  bot_api.html  description.md  dev-requirements.in  dev-requirements.txt  dodo.py  genindex.html  introduction.html  main_model.py  ml_api.html  objects.inv  py-modindex.html  pyproject.toml  requirements.in  requirements.txt  searchindex.js
.doctrees/: bot_api.doctree  index.doctree  introduction.doctree  ml_api.doctree
.github/workflows/: docs.yml
ML_component/: admm_core.py  main_model.py  utils.py  visualize.py
_modules/: index.html
_modules/denoise_bot/ML_component/: admm_core.html  visualize.html
_modules/denoise_bot/routers/: button_states.html  generate_image_button.html  magic_button.html  remove_noise_button.html  start.html  view_history_button.html
db/: db_scripts.py  db_wares.py  docker-compose.yml
db/init_scripts/: init_db.sql
docs/source/: bot_api.rst  conf.py  index.rst  introduction.rst  ml_api.rst
docs/source/_inv/: cupy_objects.inv
src/: __init__.py  __main__.py  actions.py  keyboards_buttons.py  main.py  messages.py  remove_noise_button.py  start.py
src/ML_component/: __init__.py
src/denoise_bot/: __init__.py  __main__.py  fusion_brain.py  keyboards_buttons.py
src/denoise_bot/ML_component/: __init__.py  admm_core.py  main_model.py  utils.py  visualize.py
src/denoise_bot/routers/: __init__.py  all_routers.py  button_states.py  generate_image_button.py  keyboards_buttons.py  magic_button.py  messages.py  remove_noise_button.py  start.py  translations.pot  view_history_button.py
src/denoise_bot/routers/locales/en_US/LC_MESSAGES/: translations.po
src/denoise_bot/share/doc/html/: bot_api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/denoise_bot/share/doc/html/.doctrees/: bot_api.doctree  index.doctree  introduction.doctree  ml_api.doctree
src/denoise_bot/share/doc/html/_modules/: index.html
src/denoise_bot/share/doc/html/_modules/denoise_bot/ML_component/: admm_core.html  main_model.html  utils.html  visualize.html
src/denoise_bot/share/doc/html/_modules/denoise_bot/routers/: button_states.html  generate_image_button.html  keyboards_buttons.html  magic_button.html  remove_noise_button.html  start.html  view_history_button.html
src/routers/: all_routers.py  button_states.py  generate_image_button.py  magic_button.py  messages.py  remove_noise_button.py  start.py  view_history_button.py
tests/ML/: __init__.py  test_admm_core.py  test_main_model.py  test_utils.py  test_visualize.py
tests/bot/: __init__.py  test.py  test_bot.py
