[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "denoise_bot"
version = "1.0.0"
description = "A Telegram bot for image inpainting and denoising."
readme = "README.md"
requires-python = ">=3.12.3"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312']


[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D107", "D400"]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    ".venv_linux",
    ".pyc",
    ".env",
    "db"
]

max-line-length = 120

max-doc-length = 120

ignore = ["E203", "W503", "D100", "D400"]

max-complexity = 10